@@ -14,12 +14,12 @@
  * this program.  If not, see <http://www.gnu.org/licenses/>.                           *
  ****************************************************************************************/
 
-import QtQuick 2.4
-import QtQuick.Controls 2.0
-import QtQuick.Dialogs 1.2 as Dialogs // QtQuick.Controls Dialogs only work properly with ApplicationWindow
-import QtQuick.Layouts 1.0
-import QtQml.Models 2.1
-import org.kde.kirigami 2.0 as Kirigami
+import QtQuick 2.15
+import QtQuick.Controls 2.15
+import QtQuick.Dialogs 1.3 as Dialogs // QtQuick.Controls Dialogs only work properly with ApplicationWindow
+import QtQuick.Layouts 1.15
+import QtQml.Models 2.15
+import org.kde.kirigami 2.14 as Kirigami
 import org.kde.amarok.qml 1.0 as AmarokQml
 import org.kde.amarok.analyzer 1.0
 
