@@ -14,11 +14,11 @@
  * this program.  If not, see <http://www.gnu.org/licenses/>.                           *
  ****************************************************************************************/
 
-import QtQuick 2.4
-import QtQuick.Controls 2.0
-import QtQuick.Layouts 1.2
-import QtQml.Models 2.2
-import org.kde.kirigami 2.0 as Kirigami
+import QtQuick 2.15
+import QtQuick.Controls 2.15
+import QtQuick.Layouts 1.15
+import QtQml.Models 2.15
+import org.kde.kirigami 2.14 as Kirigami
 import "toolbar"
 
 Item {
