@@ -6,6 +6,7 @@ VERSION 3.1.1
   FEATURES:
 
   CHANGES:
+   * Most of the context view QML ported from QtControls 1 to QtControls 2
 
   BUGFIXES:
    * Actually show the file browser panel toolbar
